--- a/index.html
+++ b/index.html
@@ -104,7 +104,15 @@
 	</footer>
 </main>
 
-
+<script type="text/javascript">
+    window._mfq = window._mfq || [];
+    (function() {
+        var mf = document.createElement("script");
+        mf.type = "text/javascript"; mf.async = true;
+        mf.src = "//cdn.mouseflow.com/projects/d8f46e97-3c8b-4d6c-878f-3a9896787990.js";
+        document.getElementsByTagName("head")[0].appendChild(mf);
+    })();
+</script>
 
 </body>
 </html>
