--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>angular-app</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.e29e80999ddfcffeca04.css"></head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <title>Miguel Margodt</title>
+</head>
 <body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.fec146f4472ee5fb9cac.js"></script><script type="text/javascript" src="main.d442e0e172931b4132ca.js"></script></body>
+    <div class="mm">
+        <div class="mm-upper">
+            <div class="mm-titles">
+                <h1>Miguel Margodt</h1> 
+                <h2>Frontend Developer</h2>
+            </div>
+            <div class="mm-location">
+                <img src="assets/location.svg" alt="Location icon"/>
+                <p>Kortrijk, Belgium</p>
+            </div>
+        </div>
+        <div class="mm-center"></div>
+        <div class="mm-downer">
+            <div class="mm-social">
+                <a href="https://twitter.com/miguelmargodt" class="mm-social__item">
+                    <img src="assets/twitter.svg" alt="Twitter icon"/>
+                </a>
+                <a href="https://www.facebook.com/miguelmargodt" class="mm-social__item">
+                    <img src="assets/facebook.svg" alt="Facebook icon"/>
+                </a>
+                <a href="https://www.instagram.com/miguelmargodt" class="mm-social__item">
+                    <img src="assets/instagram.svg" alt="Instagram icon"/>
+                </a>
+                <a href="https://www.linkedin.com/in/miguelmargodt/" class="mm-social__item">
+                    <img src="assets/linkedin.svg" alt="LinkedIn icon"/>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="mm-image">
+        <img src="./assets/miguelmargodt.png" alt="Miguel Margodt"/>
+    </div>
+</body>
 </html>
